tests/errors/first_stage/.data/const_not_found/const_not_found.am
myArr: .data 1, b, 3
.define b = 2
